# haptiquad

./: .gitmodules  README.md
haptiquad/: CMakeLists.txt  package.xml
haptiquad/include/haptiquad/: force_estimator.hpp  momentum_observer.hpp
haptiquad/src/: force_estimator.cpp  momentum_observer.cpp
momobs/: CMakeLists.txt  package.xml
momobs/include/momobs/: force_estimator.hpp  momentum_observer.hpp  residual_estimator.hpp  spatial_momentum_observer.hpp
momobs/src/: force_estimator.cpp  momentum_observer.cpp  residual_estimator.cpp  spatial_momentum_observer.cpp
